# clean_robot_code

./: .gitignore  README.md
src/carry_robot/: CMakeLists.txt  package.xml
src/carry_robot/docs/: introduce.md
src/carry_robot/launch/: arm_grab_1.launch  arm_grab_2.launch  arm_put.launch  carry_robot_w4a.launch  view_grab.launch  w4a_complete_flow.launch
src/carry_robot/rviz/: show.rviz
src/carry_robot/src/: arm_grab.cpp  arm_put.cpp  complete_flow.cpp  movebase_client.cpp  task_flow.cpp
src/clean_desktop_robot/: CMakeLists.txt  complete_flow.cpp  package.xml
src/clean_desktop_robot/cfg/: params_color.cfg
src/clean_desktop_robot/docs/: introduce.md
src/clean_desktop_robot/include/clean_desktop_robot/: upros_arm_driver.h
src/clean_desktop_robot/launch/: arm_grab.launch  arm_put.launch  clean_desktop_robot.launch  clean_desktop_robot_w2a.launch  clean_desktop_robot_w4at.launch  complete_flow.launch  recognize_apriltag.launch  recognize_color.launch  view_grab.launch
src/clean_desktop_robot/rviz/: show.rviz
src/clean_desktop_robot/src/: arm_grab (copy).cpp  arm_grab.cpp  arm_put.cpp  arm_test.cpp  color_detect.cpp  complete_flow (another copy).cpp  complete_flow (copy).cpp  complete_flow copy 2.cpp  complete_flow copy.cpp  complete_flow.cpp  complete_flow00.cpp  move_core.cpp  movebase_client.cpp  task_flow.cpp  tf_echo.cpp
src/clean_robot/: CMakeLists.txt  package.xml
src/clean_robot/docs/: introduce.md
src/clean_robot/include/clean_robot/: AreaPath.h
src/clean_robot/launch/: area_path.launch  clean_robot.launch  clean_robot_w2a.launch  clean_robot_w2c.launch  clean_robot_w2u.launch  clean_robot_w3s.launch  clean_robot_w4a.launch  next_goal.launch  test.launch  view_path.launch
src/clean_robot/rviz/: show.rviz
src/clean_robot/src/: AreaPath.cpp  AreaPathNode.cpp  apriltag_detect.cpp  clean_robot.cpp  coremove_client.cpp  movebase_client.cpp  next_goal.cpp  path_generate.cpp  three_path_generate.cpp
src/shoot_robot/: CMakeLists.txt  package.xml
src/shoot_robot/launch/: shoot_control.launch  shoot_robot_w2c.launch  shoot_tag_1.launch  shoot_tag_2.launch
src/shoot_robot/src/: apriltag_detect.cpp  movebase_client.cpp  shoot.cpp  shoot_robot.cpp  task_flow.cpp
